# The-Screamer

./: .clang-format-ignore  .config-esp32-with-ble-wifi  .config-nuttx  .editorconfig  .editorconfig-checker.json  .gitignore  .gitlab-ci.yml  .gitmodules  .version.sh  LICENSE  Makefile  README.md  flake.nix  meson.build  release.sh
mhello/: main.c  meson.build
nuttx/: .gitignore  Kconfig  Makefile  default.nix
nuttx/board/: .gitignore  Kconfig  README.md
nuttx/board/configs/: defconfig
nuttx/board/scripts/: ld.script.tmp
nuttx/board/src/: qemu_rv_autoleds.c  qemu_rv_userleds.c
nuttx/project-apps/: Makefile  README.md
nuttx/project-apps/meson-apps/: .gitignore  Kconfig  Make.defs  Makefile  config.toml  crossfile.sh  meson-setup.sh
nuttx/project-libs/: Makefile  README.md
nuttx/tools/: nuttx-config.sh  nuttx-style.sh
phy_mpc/: main.c  meson.build
